--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -30,14 +30,20 @@
 
                 <img class="slide-carousel active" src="./img/image10.jpg" alt=""> -->
 
-                <div class="carousel__arrow arrow-left">
+                <!-- <div class="carousel__arrow arrow-left">
                     <i class="fa-solid fa-chevron-left"></i>
                 </div>
           
                 <div class="carousel__arrow arrow-right">
                     <i class="fa-solid fa-chevron-right"></i>
-                </div>
+                </div> -->
 
+            </div>
+
+            <div class="button py-3">
+                <button id="button-start" type="button" class="btn btn-outline-dark">START</button>
+                <button id="button-reverse" type="button" class="btn btn-outline-dark">REVERSE</button>
+                <button id="button-stop" type="button" class="btn btn-outline-dark">STOP</button>
             </div>
 
         </div>
